charts/pihole/template/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: pihole.homelab-main.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 80
  tls:
  - hosts:
    - pihole.homelab-main.local
    secretName: pihole-ui-tls
